# rag-with-re-ranking

./: .gitignore  README.md  backend.py  frontend.py  main.py  pyproject.toml  requirements.txt
data/: demo.txt
experiments/: rag_1.ipynb
